fix bug - overflow-x

--- a/css/banner.css
+++ b/css/banner.css
@@ -9,6 +9,7 @@ body {
 	font-size: 18px;
 	background-image: url(../elements/background.png);
 	font-family: Calibri;
+	overflow-x: hidden;
 }
 
 .hidden {
